refactor(batch-configuration): enhance JobCompletionListener and remove irrelevant classes